# model-storage

./: .dockerignore  .travis.yml  Dockerfile  Makefile  README.md  dev-requirements.in  docker-compose.yml  requirements.in  setup.cfg
deployment/: deployment.yml  ingress.yml  service.yml
deployment/production/: deployment.yml  ingress.yml  service.yml
deployment/staging/: deployment.yml  ingress.yml
fixtures/: models.json  new_models.json
migrations/versions/: 19c7012eceb0_merge_migrations_organism_id_and_.py  1a664fb50066_.py  2538b67922e2_.py  83b6ba1af540_.py  ebda05acce73_.py  f55ed1a98c68_integer_organism_identifiers.py
requirements/: requirements.in  requirements.txt
scripts/: deploy.sh
src/model_storage/: app.py  errorhandlers.py  jwt.py  models.py  resources.py  schemas.py  settings.py  wsgi.py
src/model_warehouse/: __init__.py  app.py  models.py  resources.py  settings.py  wsgi.py
tests/: conftest.py
tests/test_integration/: test_database.py  test_endpoints.py  test_permissions.py
